# ros2docker

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  AGENTS.md  Agents.md  CONTRIBUTING.md  DEVELOPMENT_PRINCIPLES.md  LICENSE  MANIFEST.in  README.md  build.py  build_run.py  codecov.yml  exec_bash.py  install.sh  justfile  pyproject.toml  stop.py
.devcontainer/: devcontainer.json.template  re_generate_devcontainer_json.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.yml  documentation-audit.md  implementation-cleanup.md  maintainer-review.md  quality-workflow.md  redesign.md  release-process.md  repository-diagnosis.md  test-ci-audit.md  work-item.md
.github/workflows/: ci.yml  docker-e2e.yml  image-scan.yml  nightly-e2e.yml  pr-lightweight.yml  pr-merge-gate.yml  release.yml
config/: core_docker_run_args.json.template  local.json.example
docs/: agentic-workflow.md  ci.md  configuration.md  github-repository-settings.md  owner-runbook.md  quality-audit.md  quality-model.md  release.md  removed-config-surface.md  work-items.md
docs/agent-goals/: documentation-audit.md  implementation-cleanup.md  maintainer-review.md  quality-workflow.md  release-process.md
docs/playbooks/: README.md  quality-workflow.md  release-process.md  test-ci-audit.md
docs/release-notes/: TEMPLATE.md  v0.1.2.md  v0.1.3.md
example/: config.json
example/ros2ws_src/turtle_example_py/: setup.cfg  setup.py
example/ws/: catmux.yaml
example/ws/ros2src/turtle_example_py/: package.xml  setup.cfg
example/ws/ros2src/turtle_example_py/launch/: turtle_example_launch.py
example/ws/ros2src/turtle_example_py/turtle_example_py/: dynamic_turtle_tf2_broadcaster.py  fixed_turtle_tf2_broadcaster.py
src/ros2docker/: __init__.py  __main__.py  api.py  cli.py  commands.py  completion.py  config.py  diagnostics.py
src/ros2docker/resources/examples/: ros2docker.json
src/ros2docker/resources/profiles/: desktop.json  foxglove.json  mcap.json  minimal.json  novatel.json  project-develnor.json  zenoh.json
src/ros2docker/resources/schema/: ros2docker.schema.json
tests/: test_commands.py  test_docs.py
tests/contract/: test_api_contract.py  test_completion_spec.py  test_docs_reachable.py  test_init_runtime_workspace_agreement.py  test_just_targets_referenced.py  test_markdown_links.py  test_no_dead_private_helpers.py  test_package_metadata.py  test_packaged_resources.py  test_profiles.py  test_public_config_surface.py  test_pytest_policy.py  test_readme_examples.py  test_security_maintenance_config.py  test_tooling_versions.py
tests/e2e/: conftest.py  test_fast_e2e.py  test_slow_e2e.py
tests/e2e/fixtures/: README.md
tests/e2e/fixtures/bake/e2e_msgs/: CMakeLists.txt  package.xml
tests/e2e/fixtures/bake/e2e_msgs/msg/: Ping.msg
tests/e2e/fixtures/projects/catmux_center_like/ws/: catmux_center_like.yaml
tests/e2e/fixtures/projects/command_mount/mounted/: in.txt
tests/e2e/fixtures/projects/command_mount/ws/: probe.txt
tests/e2e/fixtures/workspaces/custom/ws/ros2src/e2e_custom_pkg/: package.xml  setup.cfg  setup.py
tests/e2e/fixtures/workspaces/custom/ws/ros2src/e2e_custom_pkg/e2e_custom_pkg/: __init__.py  custom_probe.py
tests/e2e/fixtures/workspaces/custom/ws/ros2src/e2e_custom_pkg/resource/: e2e_custom_pkg
tests/e2e/fixtures/workspaces/missing_dep/ws/ros2src/e2e_missing_dep_pkg/: package.xml  setup.cfg  setup.py
tests/e2e/fixtures/workspaces/missing_dep/ws/ros2src/e2e_missing_dep_pkg/e2e_missing_dep_pkg/: __init__.py  probe.py
tests/e2e/fixtures/workspaces/missing_dep/ws/ros2src/e2e_missing_dep_pkg/resource/: e2e_missing_dep_pkg
tests/e2e/fixtures/workspaces/std/ws/ros2src/e2e_std_pkg/: package.xml  setup.cfg  setup.py
tests/e2e/fixtures/workspaces/std/ws/ros2src/e2e_std_pkg/e2e_std_pkg/: __init__.py  std_probe.py
tests/e2e/fixtures/workspaces/std/ws/ros2src/e2e_std_pkg/resource/: e2e_std_pkg
tests/unit/: test_api.py  test_cli.py  test_commands.py  test_completion.py  test_config.py  test_diagnostics.py  test_init.py
utils/: core_docker_run_args.json.template  files.py  getters.py
