[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2docker"
version = "0.1.0"
description = "Versioned CLI and Python API for building and running ROS 2 Docker workspaces."
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
  { name = "develNor" },
]
keywords = ["docker", "ros2", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
ros2docker = "ros2docker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ros2docker = [
  "resources/build/*",
  "resources/examples/*",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
