[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros2docker"
description = "Versioned CLI and Python API for building and running ROS 2 Docker workspaces."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  { name = "develNor" },
]
keywords = ["docker", "ros2", "cli"]
dependencies = [
  "jsonschema>=4.21",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Installation/Setup",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/develNor/ros2docker"
Repository = "https://github.com/develNor/ros2docker"
Issues = "https://github.com/develNor/ros2docker/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "check-wheel-contents>=0.6",
  "mypy>=1.14",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff==0.15.20",
  "twine>=6.0",
  "types-jsonschema>=4.21",
]

[project.scripts]
ros2docker = "ros2docker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ros2docker = [
  "py.typed",
  "resources/build/*",
  "resources/examples/*",
  "resources/schema/*",
  "resources/profiles/*",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "e2e: Docker-backed end-to-end ros2docker tests",
  "slow: slow Docker-backed tests for image matrix and long-running ROS workflows",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["ros2docker"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = ["src/ros2docker"]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["ros2docker"]

[tool.coverage.paths]
source = [
  "src/ros2docker",
  "*/site-packages/ros2docker",
]

[tool.coverage.report]
# Hard, required coverage gate (runs inside `ci-success` via test-nondocker-cov).
# Kept a few points below actual coverage so it guards against real regressions
# without forcing churn. Raise only when actual coverage rises with real tests.
fail_under = 90
show_missing = true
skip_covered = true
exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.check-wheel-contents]
toplevel = ["ros2docker"]
