<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>e2e_std_pkg</name>
  <version>0.0.0</version>
  <description>ros2docker E2E package that uses standard ROS messages.</description>
  <maintainer email="ros2docker@example.invalid">ros2docker</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
